--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -51,6 +51,7 @@
             }
           },
           { field: "sContent", title: "内容" },
+          { field: "sHtmlContent", title: "html内容" },
           { field: "sBeginTime", title: "开始时间", align: "center", width: 180 },
           { field: "sEndTime", title: "结束时间", align: "center", width: 180 },
           {
