邮件发送默认删除时间调整为五天

--- a/front/pages/gm/mail-add2.html
+++ b/front/pages/gm/mail-add2.html
@@ -37,12 +37,12 @@
 		      <label class="layui-form-label">阅读后</label>
 		      <div class="layui-input-inline">
             <select name="iDelTimeAfterOpen" lay-verify="required">
-              <option value="0" selected>立即</option>
+              <option value="0">立即</option>
               <option value="1">1天</option>
               <option value="2">2天</option>
               <option value="3">3天</option>
               <option value="4">4天</option>
-              <option value="5">5天</option>
+              <option value="5" selected>5天</option>
               <option value="6">6天</option>
               <option value="7">7天</option>
             </select>
