--- a/front/pages/game/client-err-detail.html
+++ b/front/pages/game/client-err-detail.html
@@ -29,7 +29,7 @@
     let detailTable = table.render({
       elem: "#tableId",
       url: "/api/game/client_err/err_detail",
-      where: { ErrInfo: parent.errInfoMd5, ErrTime: parent.errTime, ClientVersion: parent.clientVersion },
+      where: { ErrInfo: parent.errInfoMd5, ClientVersion: parent.clientVersion },
       data:[],
       text: {
         none: '暂无相关数据',
