战斗验证日志

--- a/front/pages/game/fight-verify-err.html
+++ b/front/pages/game/fight-verify-err.html
@@ -99,6 +99,7 @@
       reportId = obj.data.report_id
       zoneId = obj.data.zone_id
       fightType = obj.data.fight_type
+      logMd5 = obj.data.log_md5
       switch (obj.event) {
         case "download":
           download();
@@ -113,7 +114,7 @@
       } else {
         cmd = "dump_chapterreport_http" + " " + reportId;
       }
-      okUtils.ajax("/api/game/fight-verify/export", "post", { zoneids: zoneId, cmd: cmd, fighttype: fightType, reportid: reportId}, true).done(function (response) {
+      okUtils.ajax("/api/game/fight-verify/export", "post", { zoneids: zoneId, cmd: cmd, fighttype: fightType, reportid: reportId, logmd5: logMd5}, true).done(function (response) {
         let names = new Array();
         let rows = new Array();
         names.push("服务器战报")
