--- a/front/pages/gm/json.html
+++ b/front/pages/gm/json.html
@@ -134,8 +134,10 @@
             input.attr('lay-verify', 'required');
           });
           group.prepend(row);
+          form.render();
         });
         label.append(ctlBtnAdd);
+
 
         let dataKey, dataVal, num = 0;
         for (dataKey in fieldValue) {
