--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -44,6 +44,10 @@
           { field: "iFlag", title: "状态", templet: function (d) {
             return d.iFlag == 0 ? "正在发送中" : "发送成功";
           }},
+          { field: "vItems", title: "发送道具", templet: function (d) {
+              console.log(d.vItems);
+              return  "aaaaaa";
+          }},
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
