--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -45,8 +45,12 @@
             return d.iFlag == 0 ? "正在发送中" : "发送成功";
           }},
           { field: "vItems", title: "发送道具", templet: function (d) {
-              console.log(d.vItems);
-              return  "aaaaaa";
+              let result = ""
+              d.vItems.forEach((item,index,array)=>{
+                result += "道具ID:"+item.iId;
+                result += ",数量:"+item.iNum + "\n";
+              })
+              return  result;
           }},
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
