--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -47,6 +47,12 @@
           { field: "vItems", title: "发送道具", templet: function (d) {
               let result = ""
               d.vItems.forEach((item,index,array)=>{
+                if(item.iCoin > 0){
+                  result += "金币:" + item.iCoin + "\n";
+                }
+                if(item.iDiamond > 0){
+                  result += "钻石:" + item.iDiamond + "\n";
+                }
                 result += "道具ID:"+item.iId;
                 result += ",数量:"+item.iNum + "\n";
               })
