--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -46,6 +46,12 @@
           }},
           { field: "vItems", title: "发送道具", templet: function (d) {
               let result = ""
+              if(d.iCoin > 0){
+                 result += "金币:" + d.iCoin + "\n";
+              }
+              if(d.iDiamond > 0){
+                result += "钻石:" + d.iDiamond + "\n";
+              }
               d.vItems.forEach((item,index,array)=>{
                 result += "道具ID:"+item.iId;
                 result += ",数量:"+item.iNum + "\n";
