--- a/front/pages/game/fight-verify-err.html
+++ b/front/pages/game/fight-verify-err.html
@@ -123,7 +123,7 @@
         var elementA = document.createElement('a');
 
         //文件的名称为时间戳加文件名后缀
-        elementA.download = + reportId + ".txt";
+        elementA.download = + reportId + "-战报" + ".txt";
         elementA.style.display = 'none';
 
         //生成一个blob二进制数据，内容为json数据
@@ -146,7 +146,7 @@
         var elementA = document.createElement('a');
 
         //文件的名称为时间戳加文件名后缀
-        elementA.download = + reportId + ".txt";
+        elementA.download = + reportId + "-日志" + ".txt";
         elementA.style.display = 'none';
 
         //生成一个blob二进制数据，内容为json数据
