--- a/front/pages/gm/json.html
+++ b/front/pages/gm/json.html
@@ -134,6 +134,7 @@
             input.attr('lay-verify', 'required');
           });
           group.prepend(row);
+          form.render();
         });
         label.append(ctlBtnAdd);
 
