--- a/front/pages/system/user-add.html
+++ b/front/pages/system/user-add.html
@@ -36,8 +36,7 @@
 	  <div class="layui-form-item">
 		  <label class="layui-form-label">允许GM命令(一行一个)</label>
 		  <div class="layui-input-block">
-          <textarea name="allowGmCmd" placeholder="请编辑内容" class="layui-textarea" lay-verify="required"
-					lay-verType="tips"></textarea>
+          <textarea name="allowGmCmd" placeholder="请编辑内容" class="layui-textarea" lay-verify="required" lay-verType="tips"></textarea>
 		  </div>
 	  </div>
 		<div class="layui-form-item">
