--- a/front/pages/system/user.html
+++ b/front/pages/system/user.html
@@ -46,7 +46,11 @@
         {field: "role", title: "角色", templet: function(d) {
           return '<div id="XM-' + d.id + '" ></div>';
         }},
-				{field: "allowGmCmd", title: "允许GM命令"},
+				{field: "allowGmCmd", title: "允许GM命令",function(d){
+					if(d.allowGmCmd !== ""){
+						return "已设置"
+					}
+					}},
 				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
 			]],
       done: function(res){
