--- a/front/pages/game/fight-verify-err.html
+++ b/front/pages/game/fight-verify-err.html
@@ -173,7 +173,7 @@
         elementA.style.display = 'none';
 
         //生成一个blob二进制数据，内容为json数据
-        var blob = new Blob(response.data.log);
+        var blob = new Blob([response.data.log]);
 
         //生成一个指向blob的URL地址，并赋值给a标签的href属性
         elementA.href = URL.createObjectURL(blob);
