--- a/front/pages/gm/map-edit.html
+++ b/front/pages/gm/map-edit.html
@@ -26,6 +26,34 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">数据库服务器</label>
+        <div class="layui-input-block">
+          <input type="text" name="dbHost" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">数据库端口</label>
+        <div class="layui-input-block">
+          <input type="text" name="dbPort" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">数据库用户名</label>
+        <div class="layui-input-block">
+          <input type="text" name="dbUser" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
+        <label class="layui-form-label">数据库密码</label>
+        <div class="layui-input-block">
+          <input type="text" name="dbPwd" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">更新</button>
         </div>
