--- a/front/pages/gm/map.html
+++ b/front/pages/gm/map.html
@@ -36,6 +36,10 @@
           { type: "checkbox", title: "序号", fixed: 'left' },
           { field: "iMapId", title: "地图id", width: 90, fixed: 'left' },
           { field: "vZoneId", title: "分区列表" },
+          { field: "dbHost", title: "数据库服务器" },
+          { field: "dbPort", title: "数据库端口" },
+          { field: "dbUser", title: "数据库用户名" },
+          { field: "dbPwd", title: "数据库密码" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
