--- a/front/pages/gm/map-add.html
+++ b/front/pages/gm/map-add.html
@@ -30,7 +30,7 @@
 			  <div class="layui-input-block">
 				  <input type="text" name="endpoint" disabled class="layui-input" lay-verify="required" lay-verType="tips">
 			  </div>
-		  </div>
+        </div>
 
       <div class="layui-form-item">
         <label class="layui-form-label">分区列表</label>
@@ -38,6 +38,34 @@
           <div id="zoneSelect"></div>
         </div>
       </div>
+
+      <div class="layui-form-item">
+          <label class="layui-form-label">数据库服务器</label>
+          <div class="layui-input-block">
+              <input type="text" name="dbHost" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+          </div>
+      </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">数据库端口</label>
+            <div class="layui-input-block">
+                <input type="text" name="dbPort" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">数据库用户名</label>
+            <div class="layui-input-block">
+                <input type="text" name="dbUser" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">数据库密码</label>
+            <div class="layui-input-block">
+                <input type="text" name="dbPwd" disabled class="layui-input" lay-verify="required" lay-verType="tips">
+            </div>
+        </div>
 
       <div class="layui-form-item">
         <div class="layui-input-block">
